# CupidGPT

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: build_dataset.py  download_rodd.py  explore_rodd.py  fetch_rodd_comments.py  prepare_dataset.py  scrape_reddit.py
deploy/: app.py  requirements.txt
docs/: blog.md
inference/: infer.py  merge_and_push.py
training/: config.yaml  train_qlora.py
